# easychess

./: .gitignore  Cargo.toml  README.md  update-docs.sh  whwkjargha.txt
examples/: simpleboardgame.rs
examples/simple-board-game/: Cargo.toml
examples/simple-board-game/src/: main.rs
src/: board.rs  board_default.rs  chess.rs  lib.rs  piece.rs  pieces.rs
