[package]
name = "easychess-lib"
version = "0.2.0"
edition = "2021"
description = "A library to easily create a chess game."
license = "GPL-3.0-only"
readme = "README.md"
keywords = ["chess", "board", "game", "library"]
categories = ["games", "game-engines"]
exclude = ["update-docs.sh"]
repository = "https://github.com/bobjoe12131/easychess-lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
