[package]
name = "simple-board-game"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
easychess = { path = "../../" }
clap = { version = "4.4.13", features = ["derive"] }
crossterm = "0.27"
